Fix overflow

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -4,6 +4,7 @@
   padding: 5em 1em 5em;
   background-color: #fff;
   position: relative;
+  overflow:hidden;
 
   .proof__header {
     text-align: center;
